--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,12 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog 
+            <span id="tagline">Tu blog
+                de confianza</span>
+            </span>
         </div>
-        <div id "post">
+        <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar
                 las cosas increíbles que se pueden hacer con ramas</p>
