--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="cabecera">
             Hyperblog 
             <span id="tagline">Tu blog
-                de confianza</span>
+                de cabecera</span>
             </span>
         </div>
         <div id="post">
