--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
         <div id="cabecera">
             Hyperblog 
             <span id="tagline">Tu blog
-                de confianza</span>
+                maestro</span>
             </span>
         </div>
 
@@ -24,6 +24,7 @@
                un rockstar. Pero estadísticamente
                no lo eres... 
                por ahora.</p>
+            <p>Suscribete y dale like.</p>
         </div>
     </div>
 </body>
