--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Mi Blog</title>
+    <title>Bienvenido a Hyperblog</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
