--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,9 @@
                por ahora.</p>
             <p>Suscribete y dale like.</p>
         </div>
+        <div id="footer">
+            La disciplina y perseverancia son el camino a la meta
+        </div>
     </div>
 </body>
 </html>
