último ajuste de footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,9 @@
                por ahora.</p>
             <p>Suscribete y dale like.</p>
         </div>
+        <div id="footer">
+            La disciplina y la perseverancia son el camino al éxito
+        </div>
     </div>
 </body>
 </html>
