--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,7 @@
                salir en YouTube. Excepto si eres
                un rockstar. Pero estadísticamente
                no lo eres... 
-               por ahora.</p>
+               <b>¡por ahora!</b></p>
             <p>Suscribete y dale like.</p>
         </div>
         <div id="footer">
