--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Bienvenid@ a Hyperblog 2.0</title>
+    <title>Hyperblog 2.0 del Futuro</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
