Se agregó un gif flotante a la derecha

--- a/blogpost.html
+++ b/blogpost.html
@@ -24,8 +24,8 @@
                salir en YouTube. Excepto si eres
                un rockstar. Pero estadísticamente
                no lo eres... 
-               <b>¡por ahora!</b></p>
-            <p>Suscribete y dale like.</p>
+               <b>¡por ahora!</b> <img src="https://i.pinimg.com/originals/8a/4d/bc/8a4dbc7c87a56ea8a897394cedd4bb5d.gif" alt="gif de código" id="img_gif" /></p>
+            <p>Suscribete y dale like. </p>
         </div>
         <div id="footer">
             La disciplina y la perseverancia son el camino al éxito
