Cambio al tagline y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
             <img id="logo" src="imagenes/dragon.png" />
             Hyperblog 
             <span id="tagline">Tu blog
-                de cabecera</span>
+                de confianza</span>
             </span>
         </div>
 
